2020-07-08  Diego Pino Garcia  <dpino@igalia.com>

        [Flatpak] Avoid error message 'error: org.webkit.Sdk/*unspecified*/*unspecified*' not installed
        https://bugs.webkit.org/show_bug.cgi?id=213871

        Reviewed by Philippe Normand.

        The error message happens when requesting a Flatpak SDK version but there's no Flatpak SDK installed yet.
        In that case, ignore stderr to filter out the message.

        * flatpak/flatpakutils.py:
        (run_sanitized):
        (FlatpakObject.flatpak):
        (FlatpakObject.version):

2020-07-08  Philippe Normand  <pnormand@igalia.com>

        [Flatpak SDK] Initial installation with IceCC enabled fails
        https://bugs.webkit.org/show_bug.cgi?id=213833

        Reviewed by Adrian Perez de Castro.

        Avoid attempting to use the IceCC environment during the toolchain
        archive update. The initial SDK installation triggers this when
        IceCC is enabled on the command-line or via CCACHE_PREFIX, after
        resetting the internal toolchain mapping. So the solution is to
        opt-out of this runtime configuration setup, which is useless
        anyway when the toolchain archive is being generated.

        * flatpak/flatpakutils.py:
        (WebkitFlatpak.run_in_sandbox):
        (WebkitFlatpak.pack_toolchain):

2020-07-07  Sam Weinig  <weinig@apple.com>

        Enabled testing of date/time input types for WebKit2 macOS
        https://bugs.webkit.org/show_bug.cgi?id=214044

        Reviewed by Chris Dumez.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::resetPreferencesToConsistentValues):
        Enable the date/time input types unconditionally for testing when support is compiled in. 

2020-07-07  Alex Christensen  <achristensen@webkit.org>

        Add WebCoreNSURLSession SPI to send HTTP/2 ping
        https://bugs.webkit.org/show_bug.cgi?id=214030
        <rdar://problem/64495827>

        Reviewed by Jer Noble.
