@@ -1369,7 +1369,8 @@ class Port(object):
 
     def run_minibrowser(self, args):
         # FIXME: Migrate to webkitpy based run-minibrowser. https://bugs.webkit.org/show_bug.cgi?id=213464
-        return self._run_script("old-run-minibrowser", args=args)
+        miniBrowser = self.path_to_script("old-run-minibrowser")
+        return self._executive.run_command([miniBrowser] + args, stdout=None, cwd=self.webkit_base(), return_stderr=False, decode_output=False)
 
     @memoized
     def _path_to_image_diff(self):
