@@ -1,3 +1,15 @@
+2020-07-08  Philippe Normand  <pnormand@igalia.com>
+
+        [webkitpy] run-minibrowser doesn't default to mac and stdout/stderr are not displayed
+        https://bugs.webkit.org/show_bug.cgi?id=214072
+
+        Reviewed by Adrian Perez de Castro.
+
+        * Scripts/webkitpy/minibrowser/run_webkit_app.py:
+        (main): Default to mac platform, like in old-run-minibrowser.
+        * Scripts/webkitpy/port/base.py:
+        (Port.run_minibrowser): Display MiniBrowser stdout and stderr on the terminal output.
+
 2020-07-08  Diego Pino Garcia  <dpino@igalia.com>
 
         [Flatpak] Avoid error message 'error: org.webkit.Sdk/*unspecified*/*unspecified*' not installed
